--- a/client/views/dashboard/dashboard.html
+++ b/client/views/dashboard/dashboard.html
@@ -1,3 +1,10 @@
-<template name="dashboard">
+<template name="UsersDashboard">
   This is the user dashboard!
+  {{> race_map}}
+</template>
+
+<template name="race_map">
+  <div class="map-container">
+    {{> googleMap name="race_map" options=race_map_options}}
+  </div>
 </template>
