--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -2,3 +2,17 @@
   width: 100%;
   height: 400px;
 }
+
+.add-race {
+  display: none;
+}
+
+.adding {
+  .add-race {
+    display: block;
+  }
+
+  .races {
+    display: none;
+  }
+}
