Added ability to click on pin or race to view details

--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -3,7 +3,7 @@
   height: 400px;
 }
 
-.add-race {
+.add-race, .view-race {
   display: none;
 }
 
@@ -14,5 +14,23 @@
 
   .races {
     display: none;
+  }
+
+  .view-race {
+    display: none;
+  }
+}
+
+.viewing {
+  .add-race {
+    display: none;
+  }
+
+  .races {
+    display: none;
+  }
+
+  .view-race {
+    display: block;
   }
 }
