Added ability to manually add race
Refactored geocode out to its own file and updated Athlinks code
Added method to geocode a location

--- a/client/views/dashboard/_sidebar.html
+++ b/client/views/dashboard/_sidebar.html
@@ -29,6 +29,13 @@
       <input name="athlinks_id" type="text" placeholder="Search Athlinks">
       <button type="submit">Submit</button>
     </form>
+    <form class="form-add-race">
+      <input name="name" type="text" placeholder="Race name">
+      <input name="city" type="text" placeholder="City">
+      <input name="state" type="text" placeholder="State">
+      <input name="country" type="text" placeholder="Country">
+      <button type="submit">Submit</button>
+    </form>
   </div>
 </template>
 
