Now using router to change views instead of js

--- a/client/views/layouts/application_layout.html
+++ b/client/views/layouts/application_layout.html
@@ -4,8 +4,12 @@
     {{> loginButtons}}
   </header>
 
-  <div id="main-content">
+  <div class="main-content">
     {{> yield}}
+  </div>
+
+  <div class="sidebar">
+    {{> yield "sidebar"}}
   </div>
 
   <footer>
